Set CanvasImageSmoothing.imageSmoothingQuality value to 'low' as default https://bugs.webkit.org/show_bug.cgi?id=225952

Reviewed by Sam Weinig.

Source/WebCore:

Covered by existing tests:
  - inspector/canvas/recording-2d-frameCount.html
  - inspector/canvas/recording-2d-full.html
  - inspector/canvas/recording-2d-memoryLimit.html
  - inspector/canvas/recording-2d-saves.html
  - inspector/canvas/recording-html-2d.html

* html/canvas/CanvasRenderingContext2DBase.cpp:

LayoutTests:

Defined by spec:
https://html.spec.whatwg.org/multipage/canvas.html#canvasimagesmoothing

* platform/gtk/TestExpectations:


Canonical link: https://commits.webkit.org/238031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277896 268f45cc-cd09-0410-ab3c-d52691b4dbfc